now with gradle